// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioComponentStatus renders error icon when core component is not found 1`] = `
<DataListItem
  aria-labelledby="Istio status: isito-ingress"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "var(--pf-global--danger-color--100)",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            isito-ingress
          </DataListCell>,
          <DataListCell>
            Not Found
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;

exports[`IstioComponentStatus renders error icon when core component is not running 1`] = `
<DataListItem
  aria-labelledby="Istio status: isito-ingress"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "var(--pf-global--danger-color--100)",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            isito-ingress
          </DataListCell>,
          <DataListCell>
            Not Running
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;

exports[`IstioComponentStatus renders success icon when core component is running 1`] = `
<DataListItem
  aria-labelledby="Istio status: isito-ingress"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "#3e8635",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            isito-ingress
          </DataListCell>,
          <DataListCell>
            Running
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;

exports[`IstioComponentStatus renders success icon when core component is running 2`] = `
<DataListItem
  aria-labelledby="Istio status: prometheus"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "#3e8635",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            prometheus
          </DataListCell>,
          <DataListCell>
            Running
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;

exports[`IstioComponentStatus renders warning icon when core component is not found 1`] = `
<DataListItem
  aria-labelledby="Istio status: prometheus"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <ExclamationTriangleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "var(--pf-global--warning-color--100)",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            prometheus
          </DataListCell>,
          <DataListCell>
            Not Found
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;

exports[`IstioComponentStatus renders warning icon when core component is not running 1`] = `
<DataListItem
  aria-labelledby="Istio status: prometheus"
>
  <DataListItemRow>
    <DataListItemCells
      dataListCells={
        Array [
          <DataListCell
            isIcon={true}
          >
            <ExclamationTriangleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              style={
                Object {
                  "color": "var(--pf-global--warning-color--100)",
                }
              }
              title={null}
            />
          </DataListCell>,
          <DataListCell>
            prometheus
          </DataListCell>,
          <DataListCell>
            Not Running
          </DataListCell>,
        ]
      }
    />
  </DataListItemRow>
</DataListItem>
`;
